--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <li class="element">
         <button type="button" name="button7" class="element__trash ">
         </button>
-        <img class="element__img" alt="изображение" src="./images/add_Button.svg">
+        <img class="element__img" alt="национальное достояние" src="./images/add_Button.svg">
         <div class="element__group">
           <h3 class="element__text"></h3>
           <button type="button" name="button3" class="element__button"></button>
@@ -82,7 +82,7 @@
         <button type="button" name="button-big-image-popup-close" class="popup__image-close popup__image-close_icon">
           <img src="./images/close_icon.svg" class='popup__close-width' alt="выход">
         </button>
-        <img src='./images/add_Button.svg' alt="изображение" class='popup__image-opened popup__image-opened_full '>
+        <img src='./images/add_Button.svg' alt="" class='popup__image-opened popup__image-opened_full '>
         <p class="popup__image-text popup__image-text_for_full"></p>
       </div>
     </div>
