--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <p class="popup__image-text popup__image-text_for_full"></p>
       </div>
     </div>
-
   </div>
+  <script src="scripts/initial-сards.js"></script>
   <script src="scripts/scripts.js"></script>
 </body>
 
