--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 
 
     <section class="popup popup_type_user-profile">
-      <form class="popup__container popup__container_form_user" name="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
-        <button type="button" name="button-user-popup-close-icon" class="popup__close-icon popup__close-icon_user-profile">
-          <img src="./images/close_icon.svg"  alt="выход"></button>
+      <form class="popup__container popup__container_form_user" name="Form" method="post"
+        action="mailto:vlad.rastik@yandex.ru">
+        <button type="button" name="button-user-popup-close-icon"
+          class="popup__close-icon popup__close-icon_user-profile">
+          <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
           <input type="text" name="firstname" value="Жак-Ив Кусто" class="popup__item popup__item_user-position_top">
@@ -53,7 +55,7 @@
     <section class="popup popup_type_add-images">
       <form class="popup__container" name="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
         <button type="button" name="button-image-close-icon" class="popup__close-icon popup__close-icon_second">
-          <img src="./images/close_icon.svg"  alt="выход"></button>
+          <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Новое место</h2>
           <input type="text" name="firstname" placeholder="Название" value=""
@@ -61,7 +63,8 @@
           <input type="text" name="lastname" placeholder="Ссылка на картинку" value=""
             class="popup__item popup__item_add-images-position_bottom">
         </div>
-        <button type="button" name="button-image-popup-add" class="popup__button popup__button-add-image">создать</button>
+        <button type="button" name="button-image-popup-add"
+          class="popup__button popup__button-add-image">создать</button>
       </form>
     </section>
 
