--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <button type="button" name="button-big-image-popup-close" class="popup__image-close popup__image-close_icon">
           <img src="./images/close_icon.svg" class='popup__close-width' alt="выход">
         </button>
-        <img src='./images/add_Button.svg' alt="" class='popup__image-opened popup__image-opened_full '>
+        <img src='./images/add_Button.svg' alt="нажми чтобы добавить" class='popup__image-opened popup__image-opened_full '>
         <p class="popup__image-text popup__image-text_for_full"></p>
       </div>
     </div>
