--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
 
     <section class="popup popup_type_add-images">
-      <form class="popup__container" name="Form" method="post" action="mailto:vlad.rastik@yandex.ru">
+      <form class="popup__container" name="formImg" method="post" action="mailto:vlad.rastik@yandex.ru">
         <button type="button" name="button-image-close-icon" class="popup__close-icon popup__close-icon_second">
           <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
