fix:BEM valdulation

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </form>
     </section>
 
-    <section class="popup popup__add popup_type_add-images">
+    <section class="popup popup_add popup_type_add-images">
       <form class="popup__container popup__form-add" name="formImg" method="post" action="mailto:vlad.rastik@yandex.ru" novalidate>
         <button type="button" name="button-image-close-icon" class="popup__close-icon popup__close-icon_second">
           <img src="./images/close_icon.svg" alt="выход"></button>
@@ -95,7 +95,7 @@
       </li>
     </template>
 
-    <div class="popup popup__big_img popup_type_big-images">
+    <div class="popup popup_big_img popup_type_big-images">
       <div class="popup__image-container">
         <button type="button" name="button-big-image-popup-close" class="popup__image-close popup__image-close_icon">
           <img src="./images/close_icon.svg" class='popup__close-width' alt="выход">
