--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
       </div>
     </div>
   </div>
+  <script src="scripts/valdationConfig.js"></script>
   <script src="scripts/initial-сards.js"></script>
   <script src="scripts/scripts.js"></script>
+  <script src="scripts/validate.js"></script>
 </body>
 
 </html>
