--- a/index.html
+++ b/index.html
@@ -105,10 +105,7 @@
       </div>
     </div>
   </div>
-  <script src="scripts/valdationConfig.js"></script>
-  <script src="scripts/initial-сards.js"></script>
-  <script src="scripts/scripts.js"></script>
-  <script src="scripts/validate.js"></script>
+  <script type="module" src="scripts/scripts.js"></script>
 </body>
 
 </html>
