fix: class status

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <form class="popup__container popup__container_form_user popup__form-add" name="Form" method="post"
         action="mailto:vlad.rastik@yandex.ru" novalidate >
         <button type="button" name="button-user-popup-close-icon"
-          class="popup__close-icon popup__close-icon_user-profile">
+          class="popup__close-icon popup__close-icon_user-profile popup__close-icon_general">
           <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
@@ -62,7 +62,7 @@
 
     <section class="popup popup_add popup_type_add-images">
       <form class="popup__container popup__form-add" name="formImg" method="post" action="mailto:vlad.rastik@yandex.ru" novalidate>
-        <button type="button" name="button-image-close-icon" class="popup__close-icon popup__close-icon_second">
+        <button type="button" name="button-image-close-icon" class="popup__close-icon popup__close-icon_second popup__close-icon_general">
           <img src="./images/close_icon.svg" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Новое место</h2>
@@ -97,7 +97,7 @@
 
     <div class="popup popup_big_img popup_type_big-images">
       <div class="popup__image-container">
-        <button type="button" name="button-big-image-popup-close" class="popup__image-close popup__image-close_icon">
+        <button type="button" name="button-big-image-popup-close" class="popup__image-close popup__image-close_icon popup__close-icon_general ">
           <img src="./images/close_icon.svg" class='popup__close-width' alt="выход">
         </button>
         <img src='./images/add_Button.svg' alt="нажми чтобы добавить" class='popup__image-opened popup__image-opened_full '>
