fix: bag from head

--- a/index.html
+++ b/index.html
@@ -97,14 +97,10 @@
 
     <div class="popup popup_big_img popup_type_big-images">
       <div class="popup__image-container">
-<<<<<<< HEAD
         <button type="button" name="button-big-image-popup-close" class="popup__image-close popup__image-close_icon popup__close-icon_general ">
-=======
-        <button type="button" name="button-big-image-popup-close" class="popup__image-close popup__image-close_icon ">
->>>>>>> b0a972e66248983a3ff2b58527de8614a1f8bc01
           <img src="./images/close_icon.svg" class='popup__close-width' alt="выход">
         </button>
-        <img src='./images/add_Button.svg' alt="нажми чтобы добавить" class='popup__image-opened popup__image-opened_full popup__close-icon_general'>
+        <img src='./images/add_Button.svg' alt="нажми чтобы добавить" class='popup__image-opened popup__image-opened_full '>
         <p class="popup__image-text popup__image-text_for_full"></p>
       </div>
     </div>
