--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
 
   <title>Mesto</title>
@@ -105,7 +104,7 @@
       </div>
     </div>
   </div>
-  <script type="module" src="scripts/scripts.js"></script>
+  <script type="module" src="src/index.js"></script>
 </body>
 
 </html>
