--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
     <section class="popup popup_type_user-profile">
-      <form class="popup__container popup__container_form_user popup__form-add" name="Form" method="post"
+      <form class="popup__container popup__container_form_user" name="Form" method="post"
         action="mailto:vlad.rastik@yandex.ru" novalidate >
         <button type="button" name="button-user-popup-close-icon"
           class="popup__close-icon popup__close-icon_user-profile popup__close-icon-general">
@@ -77,7 +77,7 @@
 
 
         </div>
-        <button type="button" name="button-image-popup-add"
+        <button type="submit" name="button-image-popup-add"
           class="popup__button popup__button-add-image popup__buttion-input">создать</button>
       </form>
     </section>
@@ -104,7 +104,6 @@
       </div>
     </div>
   </div>
-  <script type="module" src="src/index.js"></script>
 </body>
 
 </html>
