--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo" alt="логотип сайта" src="./images/header__logo.svg">
+      <img class="header__logo" alt="логотип сайта" src="<%=require('./images/header__logo.svg')%>">
 
     </header>
     <main>
       <section class="profile">
-        <img class="profile__avatar" alt="автор" src="./images/avatar_jak.jpg">
+        <img class="profile__avatar" alt="автор" src="<%=require('./images/avatar_jak.jpg')%>">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
@@ -25,7 +25,7 @@
           </button>
         </div>
         <button type="button" name="button-add-new-img" class="profile__button-big">
-          <img src="./images/vector.svg" class="profile__image-button" alt="кнопка"></button>
+          <img src="<%=require('./images/vector.svg')%>" class="profile__image-button" alt="кнопка"></button>
       </section>
       <ul class="elements">
       </ul>
@@ -36,48 +36,52 @@
 
 
     <section class="popup popup_type_user-profile">
-      <form class="popup__container popup__container_form_user popup__form-add" name="Form" method="post"
-        action="mailto:vlad.rastik@yandex.ru" novalidate >
+      <form class="popup__container popup__container_form_user popup__form-add" name="Form fromAll" method="post"
+        action="mailto:vlad.rastik@yandex.ru" novalidate>
         <button type="button" name="button-user-popup-close-icon"
           class="popup__close-icon popup__close-icon_user-profile popup__close-icon-general">
-          <img src="./images/close_icon.svg" alt="выход"></button>
+          <img src="<%=require('./images/close_icon.svg')%>" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
 
-          <input type="text" id="firstname-card"  minlength="2" maxlength="40" required name="firstname" value="Жак-Ив Кусто" 
-          class="popup__item popup__input popup__item_user-position_top popup__input_type_name">
+          <input type="text" id="firstname-card" minlength="2" maxlength="40" required name="firstname"
+            value="Жак-Ив Кусто" class="popup__item popup__input popup__item_user-position_top popup__input_type_name">
           <span id="firstname-card-error" class="popup__item-error error"></span>
 
-          
-          <input type="text" id="lastname-card" minlength="2" maxlength="200" required name="lastname" value="Исследователь океана"
-          class="popup__item popup__input popup__item_user-position_bottom" >
+
+          <input type="text" id="lastname-card" minlength="2" maxlength="200" required name="lastname"
+            value="Исследователь океана" class="popup__item popup__input popup__item_user-position_bottom">
           <span id="lastname-card-error" class="popup__item-error error"></span>
 
 
         </div>
-        <button type="submit" name="button-user-popup-save" class="popup__button popup__buttion-input">Сохранить</button>
+        <button type="submit" name="button-user-popup-save"
+          class="popup__button popup__buttion-input">Сохранить</button>
       </form>
     </section>
 
     <section class="popup popup_add popup_type_add-images">
-      <form class="popup__container popup__form-add" name="formImg" method="post" action="mailto:vlad.rastik@yandex.ru" novalidate>
-        <button type="button" name="button-image-close-icon" class="popup__close-icon popup__close-icon_second popup__close-icon-general">
-          <img src="./images/close_icon.svg" alt="выход"></button>
+      <form class="popup__container popup__form-add popup__container-add-images" name="formImg fromAll" method="post"
+        action="mailto:vlad.rastik@yandex.ru" novalidate>
+        <button type="button" name="button-image-close-icon"
+          class="popup__close-icon popup__close-icon_second popup__close-icon-general">
+          <img src="<%=require('./images/close_icon.svg')%>" alt="выход"></button>
         <div class="popup__main-container">
           <h2 class="popup__heading">Новое место</h2>
-          
-          <input type="text" id="place-name"  minlength="2" maxlength="40" required name="firstname" placeholder="Название" value=""
-            class="popup__item popup__input popup__item_add-images-position_top">
-            <span id="place-name-error" class="popup__item-error error"></span>
+
+          <input type="text" id="place-name" minlength="2" maxlength="40" required name="firstname"
+            placeholder="Название" value="" class="popup__item popup__input popup__item_add-images-position_top">
+          <span id="place-name-error" class="popup__item-error error"></span>
 
 
-          <input type="url" id="place-add-image" minlength="2" maxlength="200" required name="lastname" placeholder="Ссылка на картинку" value=""
+          <input type="url" id="place-add-image" minlength="2" maxlength="200" required name="lastname"
+            placeholder="Ссылка на картинку" value=""
             class="popup__item popup__input popup__item_add-images-position_bottom">
-            <span id="place-add-image-error" class="popup__item-error error"></span>
+          <span id="place-add-image-error" class="popup__item-error error"></span>
 
 
         </div>
-        <button type="button" name="button-image-popup-add"
+        <button type="submit" name="button-image-popup-add"
           class="popup__button popup__button-add-image popup__buttion-input">создать</button>
       </form>
     </section>
@@ -96,15 +100,16 @@
 
     <div class="popup popup_big_img popup_type_big-images">
       <div class="popup__image-container">
-        <button type="button" name="button-big-image-popup-close" class="popup__image-close popup__image-close_icon popup__close-icon-general ">
-          <img src="./images/close_icon.svg" class='popup__close-width' alt="выход">
+        <button type="button" name="button-big-image-popup-close"
+          class="popup__image-close popup__image-close_icon popup__close-icon-general ">
+          <img src="<%=require('./images/close_icon.svg')%>" class='popup__close-width' alt="выход">
         </button>
-        <img src='./images/add_Button.svg' alt="нажми чтобы добавить" class='popup__image-opened popup__image-opened_full '>
+        <img src="<%=require('./images/close_icon.svg')%>" alt="нажми чтобы добавить"
+          class='popup__image-opened popup__image-opened_full '>
         <p class="popup__image-text popup__image-text_for_full"></p>
       </div>
     </div>
   </div>
-  <script type="module" src="src/index.js"></script>
 </body>
 
 </html>
