--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
     </header>
     <main>
       <section class="profile">
-        <img class="profile__avatar" alt="автор" src="<%=require('./images/avatar_jak.jpg')%>">
+        <img class="profile__avatar" alt="автор" src="<%=require('./images/geralt_avatar.jpg')%>">
         <div class="profile__info">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <p class="profile__subtitle">Исследователь океана</p>
+          <h1 class="profile__title">Геральд</h1>
+          <p class="profile__subtitle">Охотник на монстров</p>
           <button type="button" aria-label="open" name="button-rename" class="profile__button profile__image">
           </button>
         </div>
@@ -36,7 +36,7 @@
 
 
     <section class="popup popup_type_user-profile">
-      <form class="popup__container popup__container_form_user popup__form-add" name="Form fromAll" method="post"
+      <form class="popup__container popup__container_form_user popup__form-add" name="Form fromAll form1" method="post"
         action="mailto:vlad.rastik@yandex.ru" novalidate>
         <button type="button" name="button-user-popup-close-icon"
           class="popup__close-icon popup__close-icon_user-profile popup__close-icon-general">
@@ -44,19 +44,19 @@
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
 
-          <input type="text" id="firstname-card" minlength="2" maxlength="40" required name="firstname"
-            value="Жак-Ив Кусто" class="popup__item popup__input popup__item_user-position_top popup__input_type_name">
+          <input type="text" id='firstname-card' name="firstname inputEdit" minlength="2" maxlength="40" required 
+            value="Геральд" class="popup__item popup__input popup__item_user-position_top popup__input_type_name popup__input-edit-profile">
           <span id="firstname-card-error" class="popup__item-error error"></span>
 
 
-          <input type="text" id="lastname-card" minlength="2" maxlength="200" required name="lastname"
-            value="Исследователь океана" class="popup__item popup__input popup__item_user-position_bottom">
+          <input type="text" id="lastname-card" minlength="2" maxlength="200" required name="lastname inputEdit"
+            value="Охотник на монстров" class="popup__item popup__input popup__item_user-position_bottom popup__input-edit-profile">
           <span id="lastname-card-error" class="popup__item-error error"></span>
 
 
         </div>
-        <button type="submit" name="button-user-popup-save"
-          class="popup__button popup__buttion-input">Сохранить</button>
+        <button type="submit" name="buttonUserPopupSave"
+          class="popup__button popup__buttion-input popup__buttion-input-edit-form">Сохранить</button>
       </form>
     </section>
 
@@ -70,19 +70,19 @@
           <h2 class="popup__heading">Новое место</h2>
 
           <input type="text" id="place-name" minlength="2" maxlength="40" required name="firstname"
-            placeholder="Название" value="" class="popup__item popup__input popup__item_add-images-position_top">
+            placeholder="Название" value="" class="popup__item popup__input popup__item_add-images-position_top popup__item_add-img">
           <span id="place-name-error" class="popup__item-error error"></span>
 
 
           <input type="url" id="place-add-image" minlength="2" maxlength="200" required name="lastname"
             placeholder="Ссылка на картинку" value=""
-            class="popup__item popup__input popup__item_add-images-position_bottom">
+            class="popup__item popup__input popup__item_add-images-position_bottom popup__item_add-img">
           <span id="place-add-image-error" class="popup__item-error error"></span>
 
 
         </div>
         <button type="submit" name="button-image-popup-add"
-          class="popup__button popup__button-add-image popup__buttion-input">создать</button>
+          class="popup__button popup__button-add-image popup__buttion-input popup__button-add-image-form">создать</button>
       </form>
     </section>
 
