--- a/src/index.html
+++ b/src/index.html
@@ -44,12 +44,12 @@
         <div class="popup__main-container">
           <h2 class="popup__heading">Редактировать профиль</h2>
 
-          <input type="text" id='firstname-card' name="firstname inputEdit" minlength="2" maxlength="40" required 
+          <input type="text" id='firstname-card' name="firstname" minlength="2" maxlength="40" required 
             value="Геральд" class="popup__item popup__input popup__item_user-position_top popup__input_type_name popup__input-edit-profile">
           <span id="firstname-card-error" class="popup__item-error error"></span>
 
 
-          <input type="text" id="lastname-card" minlength="2" maxlength="200" required name="lastname inputEdit"
+          <input type="text" id="lastname-card" minlength="2" maxlength="200" required name="lastname"
             value="Охотник на монстров" class="popup__item popup__input popup__item_user-position_bottom popup__input-edit-profile">
           <span id="lastname-card-error" class="popup__item-error error"></span>
 
@@ -69,12 +69,12 @@
         <div class="popup__main-container">
           <h2 class="popup__heading">Новое место</h2>
 
-          <input type="text" id="place-name" minlength="2" maxlength="40" required name="firstname"
+          <input type="text" id="place-name" minlength="2" maxlength="40" required name="cardName"
             placeholder="Название" value="" class="popup__item popup__input popup__item_add-images-position_top popup__item_add-img">
           <span id="place-name-error" class="popup__item-error error"></span>
 
 
-          <input type="url" id="place-add-image" minlength="2" maxlength="200" required name="lastname"
+          <input type="url" id="place-add-image" minlength="2" maxlength="200" required name="cardLink"
             placeholder="Ссылка на картинку" value=""
             class="popup__item popup__input popup__item_add-images-position_bottom popup__item_add-img">
           <span id="place-add-image-error" class="popup__item-error error"></span>
