--- a/src/index.html
+++ b/src/index.html
@@ -111,11 +111,11 @@
           class="popup__close-icon popup__close-icon-second  popup__close-icon_up popup__close-icon-general">
           <img src="<%=require('./images/close_icon.svg')%>" alt="выход"></button>
         <p class="popup__text">Вы уверены?</p>
-        <button type="button"  class="popup__button  element__button_question ">Да</button>
+        <button type="button"  class="popup__button  popup__button-question">Да</button>
       </form>
     </div>
 
-    <div class="popup popup__edit_avatar">
+    <div class="popup popup_edit_avatar">
       <form class="popup__container popup__container-edit-avatar">
         <button type="submit" name="button-image-close-icon"
           class="popup__close-icon popup__close-icon-second popup__close-icon-general">
