--- a/src/index.html
+++ b/src/index.html
@@ -123,9 +123,9 @@
           <div class="popup__main-container">
             <h2 class="popup__heading">Обновить аватар</h2>
   
-            <input type="url" id="edit-name" minlength="2" maxlength="200" required name="urlavatar"
+            <input type="url" id="place-name" minlength="2" maxlength="200" required name="urlavatar"
                placeholder="url " value="" class="popup__item popup__input popup__input-edit-avatr">
-            <span id="edit-name-error" class="popup__item-error error"></span> 
+            <span id="place-name-error" class="popup__item-error error"></span> 
           </div>
         <button type="submit" name="button-edit-avatar" class="popup__button popup__button_margin  popup__buttion-input popup__button-avatar">Сохранить</button>
       </form>
