--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
             <span id="place-add-image-error" class="popup__item-error error"></span>
         </div>
         <button type="submit" name="buttonPopupAdd"
-          class="popup__button popup__button-add-image popup__buttion-input ">создать</button>
+          class="popup__button popup__button-add-image popup__buttion-input ">Сохранить</button>
       </form>
     </section>
 
